hphp/test/slow/closure/no_properties_isset.php.expectf
Fatal error: Closure object cannot have properties in %s/slow/closure/no_properties_isset.php on line 7
